# Benchmark

./: .gitignore
.agents/skills/nvidia-engineer/: EVALUATION_REPORT.md  SKILL.md
FA/: CMakeLists.txt
FA/b200_blackwell_fmha_mxfp8/: CMakeCache.txt  CMakeLists.txt  FIX_MXFP8_LARGE_SHAPE.md  FIX_MXFP8_MULTIHEAD.md  FIX_MXFP8_RELATIVE_ERROR.md  OPT_MXFP8_Q170100_K170100_LOG.md  SOFTMAX_FP16_EXPERIMENT.md  b200_blackwell_fmha.cu
FA/b200_blackwell_fmha_mxfp8/collective/: sm100_fmha_fwd_epilogue_mxfp8_n128.hpp  sm100_fmha_fwd_epilogue_tma_warpspecialized.hpp  sm100_fmha_fwd_mainloop_mxfp8_n128_pvmx.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized.hpp  sm100_fmha_load_tma_mxfp8_n128.hpp  sm100_fmha_load_tma_warpspecialized.hpp
FA/b200_blackwell_fmha_mxfp8/docs/: sf_layout.md
FA/b200_blackwell_fmha_mxfp8/kernel/: fmha_mxfp8_n128_schedule.hpp  fmha_tile_scheduler.hpp  sm100_fmha_fwd_kernel_mxfp8_pvmx.hpp  sm100_fmha_fwd_kernel_tma_warpspecialized.hpp
FA/b200_blackwell_fmha_mxfp8/reference/: fmha_fwd_reference_mxfp8.hpp  fmha_fwd_reference_mxfp8_sfp.hpp  fmha_fwd_reference_mxfp8_sfp_dynamic.hpp  reference_abs_error.hpp
cutlass/: README.md
cutlass/examples/: planMXFP8.md
cutlass/examples/77_blackwell_fmha/: 77_blackwell_fmha.cu  CMakeLists.txt
cutlass/examples/77_blackwell_fmha/collective/: fmha_common.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized copy 2.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized copy 3.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized copy.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized_bak.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized_deep.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized_stage.hpp  sm100_fmha_load_tma_warpspecialized.hpp
cutlass/examples/77_blackwell_fmha/kernel/: sm100_fmha_fwd_kernel_tma_warpspecialized.hpp
cutlass/examples/77_blackwell_fmha/reference/: fmha_fwd_reference_mxfp8.hpp  reference_abs_error.hpp
exchange/77_blackwell_fmha/: 77_blackwell_fmha.cu  77_blackwell_fmha_ori.cu
exchange/77_blackwell_fmha/collective/: fmha_common.hpp  fmha_common_ori.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized_ori.hpp  sm100_fmha_fwd_mainloop_tma_warpspecialized_two.hpp  sm100_fmha_load_tma_warpspecialized.hpp  sm100_fmha_load_tma_warpspecialized_ori.hpp
exchange/77_blackwell_fmha/kernel/: sm100_fmha_fwd_kernel_tma_warpspecialized.hpp
temp/: vector_add  vector_add.cu
triton_operator/: CLAUDE.md  bench_mxfp8_flash_attn.py  bf16_flash_attn.py  gluon_mxfp8_flash_attn.py  mxfp8_flash_attn.py  mxfp8_flash_attn_v2.py  plan_mxfp8_flash_attn.md  test_gluon_mxfp8_flash_attn.py  test_mxfp8_flash_attn.py  test_mxfp8_flash_attn_v2.py  test_triton.py
